# gene-searcher

./: .gitignore  .tagpr  CHANGELOG.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: client.py  constants.py  errors.py  logger.py  main.py  search.py
app/components/: contents.py  meta.py  sidebar.py
app/components/tabs/: __init__.py  tab_search_result_antibody.py  tab_search_result_rna.py  tab_search_result_rna_biogps.py  tab_search_result_rna_dice.py  tab_search_result_rna_hpa.py  tab_search_result_vaccine.py
app/plot/: human_protein_atlas.py
app/search/: benchsci.py  biogps.py  dice.py  human_protein_atlas.py  mygeneinfo.py  search.py
sample/biogps/download/: IL2RA_GeneAtlas-U133A-gcrma.csv
sample/dice/download/: IL2RA_Expression_data.csv
sample/dice/export/: export_IL2RA.csv
sample/human_protein_atlas/api_response/: response_query_CD25.json  response_query_IL2RA.json
sample/human_protein_atlas/export/: tissue_export_IL15RA.csv
sample/mygene/api_response/: response_GET_query_IL2RA.json
samples/human_protein_atlas/: tissue_export_IL2RA.csv
tests/: test_add.py
tests/unit/: test_client.py  test_logger.py
tests/unit/plot/: test_human_protein_atlas.py
